--- a/_posts/2024-05-07-clml.md
+++ b/_posts/2024-05-07-clml.md
@@ -1,9 +1,9 @@
 ---
 layout: distill
-title: >
-  A Critical Exploration of "Bayesian Model Selection, Marginal Likelihood, and Generalization in Neural Networks"
-description: > 
-  This blog post comprehensively reviews the ICML 2022 paper titled "Bayesian Model Selection, the Marginal Likelihood, and Generalization." The paper's central thesis, examining the log marginal likelihood (LML) and its variant, the conditional log marginal likelihood (CLML), in various machine learning settings, is thoroughly analyzed, and the post critically engages with the paper's methodologies and findings, particularly scrutinizing the CLML's applicability and effectiveness in deep learning scenarios. The review extends beyond summarization to challenge assumptions, compare with existing literature, and examine the evaluation. This deep dive aims to foster a better understanding of Bayesian methods in model evaluation, spotlighting both their strengths and limitations in the context of neural network generalization.
+title: >-
+  A Critical Exploration of 'Bayesian Model Selection, Marginal Likelihood, and Generalization in Neural Networks'
+description: >- 
+  This blog post comprehensively reviews the ICML 2022 paper titled 'Bayesian Model Selection, the Marginal Likelihood, and Generalization.' The paper's central thesis, examining the log marginal likelihood (LML) and its variant, the conditional log marginal likelihood (CLML), in various machine learning settings, is thoroughly analyzed, and the post critically engages with the paper's methodologies and findings, particularly scrutinizing the CLML's applicability and effectiveness in deep learning scenarios. The review extends beyond summarization to challenge assumptions, compare with existing literature, and examine the evaluation. This deep dive aims to foster a better understanding of Bayesian methods in model evaluation, spotlighting both their strengths and limitations in the context of neural network generalization.
 date: 2024-05-07
 future: true
 htmlwidgets: true
@@ -71,28 +71,86 @@ _styles: >
     text-align: center;
     font-size: 16px;
   }
-  .box-note, .box-warning, .box-error, .box-important {
+  d-article .box-note,
+  d-article .box-warning,
+  d-article .box-error,
+  d-article .box-important {
     padding: 15px 15px 15px 10px;
     margin: 20px 20px 20px 5px;
     border: 1px solid #eee;
     border-left-width: 5px;
     border-radius: 5px 3px 3px 5px;
   }
-  .box-note {
+  d-article .box-note {
     background-color: #eee;
     border-left-color: #2980b9;
   }
-  .box-warning {
+  d-article .box-warning {
     background-color: #fdf5d4;
     border-left-color: #f1c40f;
   }
-  .box-error {
+  d-article .box-error {
     background-color: #f4dddb;
     border-left-color: #c0392b;
   }
-  .box-important {
+  d-article .box-important {
     background-color: #d4f4dd;
     border-left-color: #2bc039;
+  }
+  html[data-theme='dark'] d-article .box-note {
+    background-color: #555555;
+    border-left-color: #2980b9;
+  }
+  html[data-theme='dark'] d-article .box-warning {
+    background-color: #7f7f00;
+    border-left-color: #f1c40f;
+  }
+  html[data-theme='dark'] d-article .box-error {
+    background-color: #800000;
+    border-left-color: #c0392b;
+  }
+  html[data-theme='dark'] d-article .box-important {
+    background-color: #006600;
+    border-left-color: #2bc039;
+  }
+  d-article aside *,
+  d-article figcaption {
+    color: var(--global-text-color) !important;
+  }
+  d-article article p {
+    text-align: justify;
+    text-justify: inter-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+  }
+  d-article aside {
+    border: 1px solid #aaa;
+    border-radius: 4px;
+    padding: .5em .5em 0;
+    font-size: 100%;
+  }
+  d-article aside p:first-child {
+      margin-top: 0;
+  }
+  d-article details {
+    border: 1px solid #aaa;
+    border-radius: 4px;
+    padding: .5em .5em 0;
+  }
+  d-article summary {
+    font-weight: bold;
+    margin: -.5em -.5em 0;
+    padding: .5em;
+    display: list-item;
+  }
+  d-article details[open] {
+    padding: .5em;
+  }
+  d-article details[open] summary {
+    border-bottom: 1px solid #aaa;
+    margin-bottom: .5em;
   }
 ---
 
@@ -100,7 +158,7 @@ The paper, accepted as Long Oral at ICML 2022, discusses the *(log) marginal lik
 
 The paper examines the behavior of LML and CLML in various settings: density models, Fourier features, Gaussian Processes, and deep neural networks, with various insightful toy experiments and larger experiments on CIFAR-10 and CIFAR-100.
 
-The paper contrasts its findings with [Lyle et al. (2020) “A Bayesian Perspective on Training Speed and Model Selection”](https://arxiv.org/abs/2010.14499) and [Immer et al. (2021)](https://arxiv.org/abs/2104.04975).
+The paper contrasts its findings with [Lyle et al. (2020) “A Bayesian Perspective on Training Speed and Model Selection”](https://arxiv.org/abs/2010.14499)<d-cite key="lyle2020bayesian"></d-cite> and [Immer et al. (2021)](https://arxiv.org/abs/2104.04975)<d-cite key="immer2021scalable"></d-cite>.
 
 This paper review is in two halves:
 the first half highlights interesting parts of the paper; the second half critically engages with some of the concepts, particularly the CLML for DNNs. It considers similarities between the suggested CLML, cross-validation, and validation sets & losses.
@@ -112,7 +170,7 @@ I focus on the experimental results for DNNs in more detail because this is wher
 </aside>
 
 <aside class="box-note l-body" markdown="1">
-👁️‍🗨️ This review is based on [v1 of the paper](https://arxiv.org/abs/2202.11678v1). After reaching out to the authors, they have [updated the paper, expanded the discussion section](/pdfs/bmsmlg_v1_v2_version_comparison.pdf), and replied to a draft of this post. I shared two drafts with the authors (on 2022/5/30 & 31, respectively) before their reply (on 2022/6/3), and their comments refer to the first draft. This post is the second draft, except for minor edits. I have also added additional boxes marked with "👁️‍🗨️" to refer to the authors' response. I include the reply at the end. I also reply with additional investigations given the updated experiments.
+👁️‍🗨️ This review is based on [v1 of the paper](https://arxiv.org/abs/2202.11678v1)<d-cite key="lotfi2022bayesian"></d-cite>. After reaching out to the authors, they have [updated the paper, expanded the discussion section](/assets/2024-05-07/bmsmlg_v1_v2_version_comparison.pdf), and replied to a draft of this post. I shared two drafts with the authors (on 2022/5/30 & 31, respectively) before their reply (on 2022/6/3), and their comments refer to the first draft. This post is the second draft, except for minor edits. I have also added additional boxes marked with "👁️‍🗨️" to refer to the authors' response. I include the reply at the end. I also reply with additional investigations given the updated experiments.
 </aside>
 
 # Details
@@ -126,13 +184,13 @@ I focus on the experimental results for DNNs in more detail because this is wher
 
 <details markdown="1"><summary>BibTex</summary> 
 ```bibtex
-@misc{lotfi2022bayesian,
-title={Bayesian Model Selection, the Marginal Likelihood, and Generalization},
-author={Sanae Lotfi and Pavel Izmailov and Gregory Benton and Micah Goldblum and Andrew Gordon Wilson},
-year={2022},
-eprint={2202.11678},
-archivePrefix={arXiv},
-primaryClass={cs.LG}
+@inproceedings{lotfi2022bayesian,
+  title={Bayesian Model Selection, the Marginal Likelihood, and Generalization},
+  author={Lotfi, Sanae and Izmailov, Pavel and Benton, Gregory and Goldblum, Micah and Wilson, Andrew Gordon},
+  booktitle={International Conference on Machine Learning},
+  pages={14223--14247},
+  year={2022},
+  organization={PMLR}
 }
 ```
 </details>
@@ -244,8 +302,8 @@ and the first question can be made clearer as: *what is the probability that **a
 
 As we will see below, the first question can also be viewed in the context of sequential predictions and learning curves. In information theory, the question would be: how well does the model compress the training data jointly? Looking at the joint predictive distribution is not yet a common concept in deep learning, however. 
 
-Recent works by Ian Osband et al., starting with [The Neural Testbed: Evaluating Joint Predictions](https://arxiv.org/abs/2110.04629) can help build intuitions for joint predictions.
-Similarly, a *gentler* introduction, comparing marginal and joint predictions, can also be found in our recent note [Marginal and Joint Cross-Entropies & Predictives for Online Bayesian Inference, Active Learning, and Active Sampling](https://arxiv.org/abs/2205.08766). 
+Recent works by Ian Osband et al., starting with [The Neural Testbed: Evaluating Joint Predictions](https://arxiv.org/abs/2110.04629)<d-cite key="osband2022neural"></d-cite> can help build intuitions for joint predictions.
+Similarly, a *gentler* introduction, comparing marginal and joint predictions, can also be found in our recent note [Marginal and Joint Cross-Entropies & Predictives for Online Bayesian Inference, Active Learning, and Active Sampling](https://arxiv.org/abs/2205.08766)<d-cite key="kirsch2022marginal"></d-cite>. 
 </aside>
 
 The following figure summarizes several of the pitfalls the paper examines: 
@@ -287,7 +345,7 @@ The paper notes that the LA has drawbacks: it only captures uncertainty around a
 {% endcapture %}
 {% include figure.html path="assets/img/2024-05-07-clml/bmsmlg_fig3.png" max-width=max-width %}
 
-This is of particular importance for overparameterized models like DNNs, which have multiple diverse modes, as we know from deep ensembles ([Wilson, Izmailov (2021, blog post)](https://cims.nyu.edu/~andrewgw/deepensembles/);  [Wilson, Izmailov (2020)](https://arxiv.org/abs/2002.08791)). The LA, however, only centers around a single one. 
+This is of particular importance for overparameterized models like DNNs, which have multiple diverse modes, as we know from deep ensembles ([Wilson, Izmailov (2021, blog post)](https://cims.nyu.edu/~andrewgw/deepensembles/);  [Wilson, Izmailov (2020)](https://arxiv.org/abs/2002.08791)<d-cite key="wilson2020bayesian"></d-cite>). The LA, however, only centers around a single one. 
 
 
 ## Conditional Marginal Likelihood
@@ -321,7 +379,7 @@ $$
 
 The paper notes that:
 
-> Variants of the CLML were considered in Berger and Pericchi (1996) as an intrinsic Bayes factor for handling improper uniform priors in hypothesis testing, and [Fong and Holmes (2020)](https://arxiv.org/abs/1905.08737) to show a connection with cross-validation and reduce the sensitivity to the prior.
+> Variants of the CLML were considered in Berger and Pericchi (1996) as an intrinsic Bayes factor for handling improper uniform priors in hypothesis testing, and [Fong and Holmes (2020)](https://arxiv.org/abs/1905.08737)<d-cite key="fong2020marginal"></d-cite> to show a connection with cross-validation and reduce the sensitivity to the prior.
 
 We will refer to this and other prior literature below.
 
@@ -333,7 +391,7 @@ The paper examines how the CLML performs compared to the LML. It begins by criti
 
 ## On Training Speed and Learning Curves
 
-The paper then introduces a **learning curve** as the graph of how $$p(\mathcal{D}_n \mid \mathcal{D}_{<n}, \mathcal{M})$$ changes over $$n$$ (potentially, as average over different permutations of the data order to be permutation-invariant); see (c) below, and compares to [Lyle et al. (2020) “A Bayesian Perspective on Training Speed and Model Selection”](https://arxiv.org/abs/2010.14499). 
+The paper then introduces a **learning curve** as the graph of how $$p(\mathcal{D}_n \mid \mathcal{D}_{<n}, \mathcal{M})$$ changes over $$n$$ (potentially, as average over different permutations of the data order to be permutation-invariant); see (c) below, and compares to [Lyle et al. (2020) “A Bayesian Perspective on Training Speed and Model Selection”](https://arxiv.org/abs/2010.14499)<d-cite key="lyle2020bayesian"></d-cite>. 
 
 A rough **TL;DR of Lyle et al. (2020)** is that the sum decomposition of the LML, shown earlier, is just the (discrete) area under the learning curve and that for DNNs, we can use the sum over mini-batch training losses as a proxy to predict generalization behavior in the spirit of Occam's razor.
 
@@ -414,7 +472,7 @@ We expand on the prior art mentioned in the paper to be able to place it better 
 
 ### CLML vs Cross-validation
 
-As noted in the paper, [Fong and Holmes (2020)’s “On the marginal likelihood and cross-validation”](https://arxiv.org/abs/1905.08737)  connects LML and leave-p-out cross-validation:
+As noted in the paper, [Fong and Holmes (2020)’s “On the marginal likelihood and cross-validation”](https://arxiv.org/abs/1905.08737)<d-cite key="fong2020marginal"></d-cite> connects LML and leave-p-out cross-validation:
 
 {% include figure.html path="assets/img/2024-05-07-clml/otmlacv_sec3.1.png" %}
 
@@ -476,7 +534,7 @@ In appendix D, the paper explains how many orderings the CLML is averaged over f
 The paper notes that the DNN experiments use an 80%/20% split on CIFAR-10 using **only 20 LA samples**: 
 A model is trained using 80% of the training data and then evaluated on a 20% held-out "validation set." The CLML of this model is compared to the (BMA) test accuracy or test (cross-entropy) loss of a model trained on 100% of the training data. The LML is finally estimated using the LA of a model trained on 100% of the training data. 
 
-From [our recent note "Marginal and Joint Cross-Entropies & Predictives for Online Bayesian Inference, Active Learning, and Active Sampling”](https://arxiv.org/abs/2205.08766), we can hypothesise that 20 LA samples are probably not sufficient to obtain a good CLML estimate (*which corresponds to estimating a joint prediction*). It is more likely that we only obtain a sample of the validation loss (*as sum of marginal predictions*) than a good sample of the CLML. 
+Given the findings in ["Marginal and Joint Cross-Entropies & Predictives for Online Bayesian Inference, Active Learning, and Active Sampling”](https://arxiv.org/abs/2205.08766)<d-cite key="kirsch2022marginal"></d-cite>, we can hypothesise that 20 LA samples are probably not sufficient to obtain a good CLML estimate (*which corresponds to estimating a joint prediction*). It is more likely that we only obtain a sample of the validation loss (*as sum of marginal predictions*) than a good sample of the CLML. 
 
 <aside class="box-warning l-body" markdown="1">
 ❓ How does the CLML compare to the validation loss? Could we just compute the validation loss directly instead of the CLML? 
@@ -640,8 +698,7 @@ This is not surprising because it is well-known that the validation loss of a mo
 
 It would be interesting to determine how the CLML estimated via LA compares with the LML estimated via LA. Similarly, comparing the CLML to the validation loss would be interesting.
 
-However, my expectation is that an estimate via sampling will not be different very different from the validation loss simply because sampling-based approaches do not seem to be working well for estimating joint predictive distributions. 
-This is a finding detailed in our recent note "[Marginal and Joint Cross-Entropies & Predictives for Online Bayesian Inference, Active Learning, and Active Sampling](https://arxiv.org/abs/2205.08766)".
+However, the expectation is that an estimate via sampling will not be different very different from the validation loss simply because sampling-based approaches do not seem to be working well for estimating joint predictive distributions. 
 
 <aside class="box-note l-body" markdown="1">
 👉 Beyond providing a more principled view on using a validation set and a beautiful exposition of previous literature and various pitfalls and use-cases, this paper surfaces exciting research questions---especially in the small-data regime. Several follow-up experiments could provide further insights.
@@ -679,7 +736,7 @@ Thanks for your interest in our paper and your comments. Here are our comments a
 
 We appreciate your interest and effort in reading the paper, and we think your questions will improve the clarity of the paper, which we have updated with an acknowledgement to you. Given the above considerations, we do think there would need to be substantial revisions to the blog post to accurately and fairly reflect the paper. We would appreciate being able to see the revisions before it’s posted.
 
-Best wishes,\
+Best wishes,\\
 Sanae, Pavel, Greg, Micah, Andrew
 </blockquote>
 
@@ -776,7 +833,7 @@ As said before, it would be great to actually compute the difference between CLM
 
 This changes my interpretation of the sample ablation in the author's response. The ablation shows no difference between 20 and 100 LA samples, with 100 LA even samples having a slightly lower rank correlation. So it seems x5 more LA samples are not enough to make a difference, or the Laplace posterior cannot capture the posterior as well as we would like. It would be interesting to examine this further. For the previously mentioned note, we have run some toy experiments on MNIST with 10,000 MC Dropout samples previously and did not find good adaptation. Obviously, the LA is not MC Dropout, and this is speculation, but it seems in line with my prior experience.
 
-Recent tweets by [@RobertRosenba14](https://twitter.com/RobertRosenba14) and [@stanislavfort](https://twitter.com/stanislavfort) also explain why sampling might not be fruitful for estimating joint distributions and compute the CLML in high-dimensional spaces---see [here](https://twitter.com/stanislavfort/status/1529865444701577216) and [here](https://twitter.com/RobertRosenba14/status/1517465854157500419).
+Tweets by [@RobertRosenba14](https://twitter.com/RobertRosenba14) and [@stanislavfort](https://twitter.com/stanislavfort) also explain why sampling might not be fruitful for estimating joint distributions and compute the CLML in high-dimensional spaces---see [here](https://twitter.com/stanislavfort/status/1529865444701577216) and [here](https://twitter.com/RobertRosenba14/status/1517465854157500419).
 
 Given the above, it is fair to say that 
 the estimate of the CLML is probably not as good as hoped, and further experiments might be needed to tease out when the CLML provides more value than the BMA validation loss. Note, however, that this question has not been explicitly examined in the paper. Instead, the paper compares LML and CLML with distinct estimation methods for DNNs.
