--- a/assets/bibliography/2024-05-07-clml.bib
+++ b/assets/bibliography/2024-05-07-clml.bib
@@ -1,7 +1,66 @@
-@article{gregor2015draw,
-  title={DRAW: A recurrent neural network for image generation},
-  author={Gregor, Karol and Danihelka, Ivo and Graves, Alex and Rezende, Danilo Jimenez and Wierstra, Daan},
-  journal={arXiv preprint, arXiv:1502.04623},
-  year={2015},
-  url={https://arxiv.org/pdf/1502.04623.pdf}
+@article{lyle2020bayesian,
+  title={A Bayesian Perspective on Training Speed and Model Selection},
+  author={Lyle, Clare and Schut, Lisa and Ru, Robin and Gal, Yarin and van der Wilk, Mark},
+  journal={Advances in neural information processing systems},
+  volume={33},
+  pages={10396--10408},
+  year={2020}
+}
+
+@inproceedings{immer2021scalable,
+  title={Scalable Marginal Likelihood Estimation for Model Selection in Deep Learning},
+  author={Immer, Alexander and Bauer, Matthias and Fortuin, Vincent and R{\"a}tsch, Gunnar and Emtiyaz, Khan Mohammad},
+  booktitle={International Conference on Machine Learning},
+  pages={4563--4573},
+  year={2021},
+  organization={PMLR}
+}
+
+@inproceedings{lotfi2022bayesian,
+  title={Bayesian Model Selection, the Marginal Likelihood, and Generalization},
+  author={Lotfi, Sanae and Izmailov, Pavel and Benton, Gregory and Goldblum, Micah and Wilson, Andrew Gordon},
+  booktitle={International Conference on Machine Learning},
+  pages={14223--14247},
+  year={2022},
+  organization={PMLR}
+}
+
+@article{osband2022neural,
+  title={The Neural Testbed: Evaluating Joint Predictions},
+  author={Osband, Ian and Wen, Zheng and Asghari, Seyed Mohammad and Dwaracherla, Vikranth and Lu, Xiuyuan and Ibrahimi, Morteza and Lawson, Dieterich and Hao, Botao and O'Donoghue, Brendan and Van Roy, Benjamin},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={12554--12565},
+  year={2022}
+}
+
+@article{kirsch2022marginal,
+  title={Marginal and Joint Cross-Entropies & Predictives for Online Bayesian Inference, Active Learning, and Active Sampling},
+  author={Kirsch, Andreas and Kossen, Jannik and Gal, Yarin},
+  journal={arXiv preprint arXiv:2205.08766},
+  year={2022}
+}
+
+@article{wilson2020bayesian,
+  title={Bayesian Deep Learning and a Probabilistic Perspective of Generalization},
+  author={Wilson, Andrew G and Izmailov, Pavel},
+  journal={Advances in neural information processing systems},
+  volume={33},
+  pages={4697--4708},
+  year={2020}
+}
+
+@article{fong2020marginal,
+    author = {Fong, E and Holmes, C C},
+    title = "On the Marginal Likelihood and Cross-Validation",
+    journal = {Biometrika},
+    volume = {107},
+    number = {2},
+    pages = {489-496},
+    year = {2020},
+    month = {01},
+    issn = {0006-3444},
+    doi = {10.1093/biomet/asz077},
+    url = {https://doi.org/10.1093/biomet/asz077},
+    eprint = {https://academic.oup.com/biomet/article-pdf/107/2/489/33217997/asz077.pdf},
 }
