fix expressions and typos

--- a/assets/bibliography/2024-05-07-understanding-expressive-tgns.bib
+++ b/assets/bibliography/2024-05-07-understanding-expressive-tgns.bib
@@ -138,4 +138,15 @@
   year={2022}
 }
 
+@inproceedings{fuchs2023universalityofneural,
+  author = {Fuchs*, Fabian B. and Veličković*, Petar},
+  title = {Universality of Neural Networks on Sets vs. Graphs},
+  abstract = {Universal function approximation is one of the central tenets in theoretical deep learning research. It is the question of whether a specific neural network architecture is, in theory, able to approximate any function of interest. The ICLR paper “How Powerful are Graph Neural Networks?” shows that mathematically analysing the constraints of an architecture as a universal function approximator and alleviating these constraints can lead to more principled architecture choices, performance improvements, and long-term impact on the field. Specifically in the fields of learning on sets and learning on graphs, universal function approximation is a well-studied property. The two fields are closely linked because the need for permutation invariance in both cases leads to similar building blocks. However, we argue that these two fields have sometimes evolved in parallel, not fully exploiting their synergies. This post aims at bringing these two fields closer together, particularly from the perspective of universal function approximation.},
+  booktitle = {ICLR Blogposts 2023},
+  year = {2023},
+  date = {May 1, 2023},
+  note = {https://iclr-blogposts.github.io/2023/blog/2023/sets-and-graphs/},
+  url  = {https://iclr-blogposts.github.io/2023/blog/2023/sets-and-graphs/}
+}
+
 
